# MoveRobot

./: README.md
humble/src/robot_model/urdf/: wheel_robot.urdf
humble/src/wheeled_humanoid_moveit/: .setup_assistant  CMakeLists.txt  package.xml
humble/src/wheeled_humanoid_moveit/config/: initial_positions.yaml  isaac_ros_cumotion_planning.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  robot_model.ros2_control.xacro  robot_model.srdf  robot_model.urdf.xacro  ros2_controllers.yaml
humble/src/wheeled_humanoid_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
jazzy/src/robot/mmk2/mmk2_fake_moveit_config/: CMakeLists.txt  package.xml
jazzy/src/robot/mmk2/mmk2_fake_moveit_config/config/: moveit_controllers.yaml
jazzy/src/robot/mmk2/mmk2_fake_moveit_config/launch/: demo.launch.py
jazzy/src/robot/mmk2/mmk2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
jazzy/src/robot/mmk2/mmk2_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  mmk2.srdf  moveit_controllers.yaml  moveit_cpp.yaml
jazzy/src/robot/mmk2/mmk2_moveit_config/launch/: demo.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py
jazzy/src/robot/mmk2/mmk2_urdf/: README.md  package.xml
jazzy/src/robot/mmk2/mmk2_urdf/launch/: display.launch.py
jazzy/src/robot/mmk2/mmk2_urdf/meshes/mmk2/collision/: head_pitch_link.STL
jazzy/src/robot/mmk2/mmk2_urdf/scripts/: export_for_viewer.sh
jazzy/src/robot/mmk2/mmk2_urdf/usd/: .asset_hash  config.yaml
jazzy/src/robot/mmk2/mmk2_urdf/usd/configuration/: mmk2_sensor.usd
jazzy/src/scene/demo_urdf/: CMakeLists.txt
jazzy/src/scene/demo_urdf/launch/: moveit_with_scene.launch.py
jazzy/src/scene/demo_urdf/scripts/: publish_scene_to_moveit.py
jazzy/src/scene/demo_urdf/urdf/: scene.urdf
jazzy/src/scene/ws_urdf/: CMakeLists.txt  package.xml
jazzy/src/scene/ws_urdf/config/: gongwei.rviz
jazzy/src/scene/ws_urdf/launch/: moveit_with_gongwei.launch.py  publish_workstation.launch.py
jazzy/src/scene/ws_urdf/rviz/: view_robot_tf.rviz
jazzy/src/scene/ws_urdf/urdf/: gongwei.urdf
jazzy/tool/process/: arm.py  gripper.py  run_mmk2.py  states.py
jazzy/tool/process/data/: 122.json  1221.json  22.json  fake.json  raw_data.json  test.json
src/demo_perception/: .setup_assistant  CMakeLists.txt  package.xml
src/demo_perception/config/: joint_limits.yaml  mmk2.srdf  moveit.rviz  moveit_controllers.yaml  pilz_industrial_motion_planner_planning.yaml
src/demo_perception/launch/: demo_with_obstacle.launch.py  demo_with_perception.launch.py  demo_with_workstation.launch.py  perception_obstacle.launch.py  pointcloud.launch.py  rsp.launch.py  spawn_controllers.launch.py
src/demo_perception/scripts/: add_obstacle_node.py  depth_to_pointcloud_node.py  pointcloud_to_planning_scene.py
src/demo_urdf/: README.md  package.xml
src/demo_urdf/launch/: moveit_with_scene.launch.py  scene.launch.py
src/mmk2_fake_moveit_config/: README.md
src/mmk2_fake_moveit_config/scripts/: fake_joint_driver.py
src/mmk2_moveit_config/: package.xml
src/mmk2_moveit_config/config/: ompl_planning.yaml
src/mmk2_moveit_config/launch/: move_group.launch.py  warehouse_db.launch.py
src/mmk2_urdf/: CMakeLists.txt
src/mmk2_urdf/config/: display.rviz
src/mmk2_urdf/urdf/: mmk2.urdf
src/mmk2_urdf/usd/: mmk2.usd
src/mmk2_urdf/usd/configuration/: mmk2_physics.usd
src/process/: save_panel.py
src/process/data/: 1111.json  1222.json  2.json  demo.json  demo1.json  joint_left1.json
src/ws_urdf/launch/: moveit_with_gongwei.launch.py  test_gongwei.launch.py  view_robot_tf.launch.py
src/ws_urdf/scripts/: publish_scene_to_moveit.py  publish_ws_to_moveit.py
